# astronova

./: .gitignore  .pre-commit-config.yaml  .swiftlint.yml  ANALYTICS_INTEGRATION.md  Astronova_AppStore_Readiness_Report.docx  AuthKey_T94T2R7335.p8  CLAUDE.md  CLOUDKIT_ACCESS_DENIED_FIX.md  CLOUDKIT_SCHEMA_SETUP.md  CLOUDKIT_WEB_SERVICES_SETUP.md  COMPELLING_LANDING_FEATURES.md  CloudKitTestData.swift  CompellingLandingView.swift  DEPLOYMENT_STATUS.md  DEPLOYMENT_STRATEGY.md  Dockerfile  LICENSE  MapKitLocationService.swift  OPERATOR_CUTOVER.md  ORACLE_UI_FIXES.md  PRIVACY_AUDIT.md  PRIVACY_NUTRITION_LABEL.md  Package.swift  PlanetaryCalculationsView.swift  README.md  ROUTE_ANALYSIS.md  SECURITY-CLOUDKIT-ROTATION.md  SECURITY.md  SMARTLOOK_DIAGNOSTIC.md  SUBSCRIPTION_EVENTS.md  SkeletonView.swift  TESTING_STRATEGY.md  UX_GAP_ANALYSIS.md  agents.md  astronova-fixes.patch  astronova_smoke.sh  backend-agents.md  frontend-agents.md  main  pyproject.toml  (+3 more)
.git-hooks/: pre-commit
.github/: CI_COMMANDS.md  PULL_REQUEST_TEMPLATE.md
.scratch/: time-travel-rethink-plan.md
AppCore/: Package.swift
AstroEngine/: Package.swift
AstronovaApp/: APIModels.swift  APIServices.swift  AppDelegate.swift  Architecture.swift  AstronovaAppApp.swift  AstronovaAppDebug.entitlements  AuthState.swift  AuthenticatedUser.swift  CompellingLandingView.swift  ContentManagementService.swift  Environment.plist  GoogleMapsLocationPicker.swift  GooglePlacesAutocompleteView.swift  GooglePlacesService.swift  Info.plist  KeyboardHandling.swift  KeychainHelper.swift  LoadingView.swift  LogoAnimationView.swift  MapKitAutocompleteView.swift  MapKitLocationPicker.swift  MapKitLocationService.swift  NetworkClient.swift  OnboardingView.swift  PlanetaryCalculationsView.swift  PlanetaryDataService.swift  RootView.swift  SignInWithAppleView.swift  SkeletonView.swift  StoreKitManager.swift  StoreKitTestView.swift  StubAPIServices.swift  UserProfile.swift
AstronovaAppTests/: AccessibilityTests.swift  AstronovaAppTests.swift
AstronovaAppUITests/: AstronovaAppUITests.swift  SnapshotTests.swift
AstronovaNetworking/: Package.swift
AuthKit/: Package.swift
ChartVisualization/: Package.swift
ChatService/: Package.swift
CloudKitKit/: Package.swift
CommerceKit/: Package.swift
Configuration/: Debug.xcconfig  Release.xcconfig
DataModels/: Package.swift
HoroscopeService/: Package.swift
Intents/: AstronovaAppIntents.swift  Intents.intentdefinition  SiriIntentHandler.swift
Mocks/: MockServices.swift
NotificationKit/: Package.swift
SettingsKit/: Package.swift
SwissEphemeris/: Package.swift
TodaysHoroscopeWidget/: Info.plist  TodaysHoroscopeWidget.swift  TodaysHoroscopeWidgetBundle.swift
UIComponents/: Package.swift
app-store-assets/: APP_STORE_SUBMISSION.md  COPY_PASTE_READY.txt  IAP_COPY_PASTE_METADATA.txt  IAP_QUICK_CHECKLIST.md  STOREKIT_LOCAL_TESTING.md
app-store-prep/: WAVE2_TREE_CLASSIFICATION_2026-05-30.md
astronova.xcodeproj/: project.pbxproj
backend/: .env.example  .gitignore  API_TEST_RESULTS.md  DEPLOYMENT.md  Dockerfile  README_DOCKER.md  app.py  app_enhanced_logging.py  cloudkit-schema.ckdb  cloudkit_config.py  cloudkit_private_key.pem  config.py  debug_cloudkit_auth.py  debug_cloudkit_simple.py  docker-compose.yml  docker-entrypoint.sh  env_example.txt  openapi.yaml  openapi_spec.yaml  requirements.txt  spec.py  start.sh  test_chat_api.py  test_cloudkit_ci.py  test_cloudkit_erd_complete.py  test_cloudkit_integration.py  test_gemini.py  test_record_save.py  test_server.py  test_suite.py  validate_setup.py
ci_scripts/: ci_post_clone.sh
client/: ExportOptions.plist  Package.swift  README.md  ReportDetailView.swift  RootView.swift  SelfDataService.swift
cosmochat/: ContentView.swift  Item.swift  cosmochatApp.swift
cosmochat.xcodeproj/: project.pbxproj
cosmochatTests/: cosmochatTests.swift
cosmochatUITests/: cosmochatUITests.swift  cosmochatUITestsLaunchTests.swift
docs/: ACCESSIBILITY_GUIDELINES.md  CLIENT_PAYMENT_VERIFICATION.md  README.md  (+9 more)
(+2051 files in other folders)
